example/logs_example/legup_logs/example5_test3_ERROR.txt
----------------------------------------------------------------------------
LegUp High-Level Synthesis Tool Version 7.5 (http://legupcomputing.com)
Copyright (c) 2015-2019 LegUp Computing Inc. All Rights Reserved.
For technical issues, please contact: support@legupcomputing.com
For general inquiries, please contact: info@legupcomputing.com
Date: Fri Jul 31 17:41:10 2020
----------------------------------------------------------------------------
Info: You are using the trial version of LegUp (trial days remaining: 305).
      The trial version can only be used for non-commercial evaluation purposes.
      Run LegUp LicenseActivation to activate the full version of LegUp with a valid product key.
Info: LegUp is starting.
example5_labeled.c:13:10: warning: address of stack memory associated with local variable 'a' returned [-Wreturn-stack-address]
        return &a;
                ^
1 warning generated.
Info: Adding no_inline attribute to the user-specified function: test
[StructSupportChecking.cpp:66: isTargetTy] Warning: Found unsplitted struct type %union.U1 = type { i32 }
Info: Running Allocation.
Info: Target FPGA: INTEL Arria10.
Info: Clock period constraint: 5.00 ns (200.00 MHz).
Info: Allocating memories.
Info: Running Scheduling for function: test.
Info: Done Scheduling.
Info: Generating RTL for function: test.
Info: Generating module declaration.
Info: Generating module signals.
Info: Running Binding for function: test.
Info: Generating module datapath.
[RTL.cpp:384: find] Fatal error: Could not find a signal named "a_reg".
[RTL.cpp:384: find] Fatal error: LegUp has exited unexpectedly. Please report issue to support@legupcomputing.com.
